# TinyRobo

./: .gitignore  README.md  camera_setup_with_v4l2loopback  notes.txt  proposal_feedback.txt  what_i_did
config/: usb_cam_1024x768.ini  usb_cam_1024x768.yaml  usb_cam_1024x768.yml  usb_cam_1600x1200.ini  usb_cam_1600x1200.yml  usb_cam_2048x1024.ini  usb_cam_2048x1024.yml  usb_cam_2048x1536_cropped.ini  usb_cam_2048x1536_cropped.yml  usb_cam_640x480.ini  usb_cam_640x480.yml  usb_cam_800x600.ini  usb_cam_cropped.ini  usb_cam_cropped.yml
config/argos_worlds/: compiler_test_basic.argos  live_ui_arena.argos
data/: 13_ams.txt  13_james.txt  15_ams.txt  15_james.txt  By Hypothesis.ipynb  Drive Testing.ipynb  Learning Pandas.ipynb  Non-select gestures.ipynb  Swarm+Test+Drive_December+4%2C+2017_16.53.csv  Tagging gestures.ipynb  all_data_handler.py  all_participants.json  all_raw_except_35.txt  ams_p10_new.txt  ams_p11_new.txt  ams_p12_new.txt  ams_p13_new.txt  ams_p14_new.txt  ams_p15_new.txt  ams_p16_new.txt  ams_p17_new.txt  ams_p18_new.txt  ams_p19_new.txt  ams_p1_new.txt  ams_p20_new.txt  ams_p21_new.txt  ams_p22_new.txt  ams_p23_new.txt  ams_p24_new.txt  ams_p25_new.txt  ams_p26_new.txt  ams_p27_new.txt  ams_p28_new.txt  ams_p29_new.txt  ams_p2_new.txt  ams_p30_new.txt  ams_p31_new.txt  ams_p32_new.txt  ams_p33_new.txt  ams_p34_new.txt  (+163 more)
data/early_coding/: p_11_ams.json  p_11_ams.txt  p_11_james.txt  p_12_ams.txt  p_13_ams.txt  p_13_james.json  p_14_james.txt  p_15_ams.json  p_15_ams.txt  p_15_james.txt  p_16_ams.txt  p_16_james.txt  p_17_ams.txt  p_17_james.txt  p_18_ams.txt  p_18_james.txt  p_19_james.txt  p_20_ams.json  p_20_ams.txt  p_20_james.txt  p_21_ams.txt  p_23_ams.txt  p_24_ams.txt  reg_p1.txt  reg_p10.txt  reg_p12.txt  reg_p14.txt  reg_p15.txt  reg_p17.txt  reg_p18.txt  reg_p19.txt  reg_p2.txt  reg_p20.txt  reg_p3.txt  reg_p5.txt  reg_p6.txt  reg_p9.txt
data/first_10_csv/: p1.csv  p10.csv  p3.csv  p4.csv  p6.csv  p7.csv
data/first_pass_json/: p_1_ams.json  p_3_ams.json  p_3_james.json  p_4_james.json  p_7_james.json  p_8_ams.json
data/json_with_edits/: p_10_ams.json  p_10_james.json  p_2_ams.json  p_2_james.json  p_3_ams.json  p_3_james.json  p_4_james.json  p_5_james.json  p_6_james.json  p_7_james.json  p_8_james.json  p_9_ams.json  p_9_james.json
data/last_coding_run_json/: p_18_ams.json  p_1_ams.json  p_23_ams.json  p_25_ams.json  p_28_ams.json  p_31_daltonc.json  p_32_daltonc.json  p_34_daltonc.json  p_36_daltonc.json  p_37_daltonc.json  p_38_daltonc.json  p_3_daltonc.json  p_40_daltonc.json  p_41_ams.json  p_42_ams.json  p_43_ams.json  p_44_ams.json  p_45_ams.json  p_47_ams.json  p_48_ams.json  p_4_ams.json  p_4_daltonc.json  p_50_ams.json  p_8_ams.json
data/last_coding_run_text/: ams_p10_new.txt  ams_p13_new.txt  ams_p14_new.txt  (+19 more)
docs/: Notes_on_proposal_feedback  gen_vf.py  if_i_had_a_do-over  other_gestures.txt  section_label.py  spiral_trap.xcf  swarm_table_no_bg.xcf  wall_follow_trap.xcf
hardware/: hardware_notes
software/: compiler_inputs.txt  find_esp8266.py  generate_epuck_launch.py  node_test_comms.py  pair_all.sh  primitives_and_requirements.txt  test_coord.py  test_remote_control.py  tuio_test.py  unpair_all.sh
software/catkin_ws/src/argos_ros_bridge/plugin/argos_ros_bot/: CMakeLists.txt  tiny_robo_ros.cpp  tiny_robo_ros.h
software/catkin_ws/src/neighbor_sense/: CMakeLists.txt  package.xml
software/catkin_ws/src/neighbor_sense/include/neighbor_sense/: neighbor_sense.h
software/catkin_ws/src/neighbor_sense/src/: neighbor_sense.cpp
software/catkin_ws/src/tiny_robo_msgs/: CMakeLists.txt  package.xml
software/catkin_ws/src/tiny_robo_msgs/msg/: Motor_Vel_Cmd.msg
(+2078 files in other folders)
